--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://admin:admin123@cluster0.ddxqxll.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=ENTER YOUR MONGODB URI HERE
