--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "CRUD"
   ],
   "author": "Jerome Gutierrez",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
